[gd_scene load_steps=7 format=3 uid="uid://dtt0t5p8mqybc"]

[ext_resource type="Script" path="res://scripts/Effects/saline_solution_missile.gd" id="1_vjxg3"]
[ext_resource type="AudioStream" uid="uid://rrrcea08kr6e" path="res://sounds/SFX/SalineSolution/missile_sound.wav" id="2_haped"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5x2hn"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_w7wbr"]

[sub_resource type="CylinderMesh" id="CylinderMesh_aiy0w"]
top_radius = 0.3

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uk2um"]
height = 2.4715

[node name="SalineSolutionMissile" type="RigidBody3D"]
collision_layer = 16384
collision_mask = 41
mass = 10.0
gravity_scale = 0.5
script = ExtResource("1_vjxg3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.99998, 0.00329745, 0.00531422, -0.00530462, -0.00290937, 0.999982, 0.00331286, -0.99999, -0.00289181, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_5x2hn")
mesh = SubResource("CapsuleMesh_w7wbr")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.367216)
mesh = SubResource("CylinderMesh_aiy0w")

[node name="TimerDestruction" type="Timer" parent="."]
wait_time = 0.8

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.190675)
shape = SubResource("CapsuleShape3D_uk2um")

[node name="MissileSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_haped")
volume_db = 40.0
max_db = 6.0
bus = &"SFX"
doppler_tracking = 1

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 16384
collision_mask = 41

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -0.190675)
shape = SubResource("CapsuleShape3D_uk2um")

[connection signal="body_entered" from="." to="." method="_on_characterbody3d_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TimerDestruction" to="." method="_on_timer_destruction_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_characterbody_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
